[gd_scene load_steps=15 format=2]

[ext_resource path="res://addons/atlasica/dock/FileInput.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/atlasica/dock/Dock.gd" type="Script" id=2]
[ext_resource path="res://addons/atlasica/dock/IconLabel.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/atlasica/dock/view_atlas/ViewAtlas.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/atlasica/dock/Inspector.tscn" type="PackedScene" id=5]
[ext_resource path="res://addons/atlasica/dock/view_list/ViewList.tscn" type="PackedScene" id=6]
[ext_resource path="res://addons/atlasica/assets/icons/123.png" type="Texture" id=7]
[ext_resource path="res://addons/atlasica/dock/view_orphan/ViewOrphan.tscn" type="PackedScene" id=8]
[ext_resource path="res://addons/atlasica/assets/logo/logo128.png" type="Texture" id=9]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 96, 32, 32 )

[node name="Dock" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
tab_align = 0

[node name="Setup" type="HBoxContainer" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Setup"]
margin_right = 168.0
margin_bottom = 564.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Setup/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 148.0
margin_bottom = 544.0
custom_constants/separation = 15

[node name="TextureRect" type="TextureRect" parent="TabContainer/Setup/MarginContainer/VBoxContainer"]
margin_right = 128.0
margin_bottom = 128.0
rect_min_size = Vector2( 128, 128 )
size_flags_horizontal = 3
texture = ExtResource( 9 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="TabContainer/Setup/MarginContainer/VBoxContainer"]
margin_top = 143.0
margin_right = 128.0
margin_bottom = 157.0
size_flags_horizontal = 3
text = "Atlasica"
align = 1

[node name="LinkButtonGitHub" type="Button" parent="TabContainer/Setup/MarginContainer/VBoxContainer"]
margin_top = 172.0
margin_right = 128.0
margin_bottom = 192.0
text = "GitHub page"

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Setup"]
margin_left = 172.0
margin_right = 686.0
margin_bottom = 564.0

[node name="GridContainer" type="GridContainer" parent="TabContainer/Setup/VBoxContainer"]
margin_right = 514.0
margin_bottom = 156.0
size_flags_horizontal = 3
custom_constants/vseparation = 22
custom_constants/hseparation = 0
columns = 2

[node name="Step1" type="TextureRect" parent="TabContainer/Setup/VBoxContainer/GridContainer"]
margin_right = 64.0
margin_bottom = 52.0
rect_min_size = Vector2( 64, 52 )
size_flags_vertical = 0
texture = SubResource( 2 )
stretch_mode = 4

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Setup/VBoxContainer/GridContainer"]
margin_left = 64.0
margin_right = 469.0
margin_bottom = 52.0
custom_constants/separation = 0

[node name="Label" type="Label" parent="TabContainer/Setup/VBoxContainer/GridContainer/HBoxContainer"]
margin_top = 19.0
margin_right = 174.0
margin_bottom = 33.0
text = "Create your atlas using the "

[node name="LinkButtonSpriteBuilder" type="LinkButton" parent="TabContainer/Setup/VBoxContainer/GridContainer/HBoxContainer"]
margin_left = 174.0
margin_top = 19.0
margin_right = 257.0
margin_bottom = 33.0
size_flags_vertical = 4
text = "SpriteBuilder"

[node name="Label2" type="Label" parent="TabContainer/Setup/VBoxContainer/GridContainer/HBoxContainer"]
margin_left = 257.0
margin_top = 19.0
margin_right = 405.0
margin_bottom = 33.0
text = " and export the zip file."

[node name="Step2" type="TextureRect" parent="TabContainer/Setup/VBoxContainer/GridContainer"]
margin_top = 74.0
margin_right = 64.0
margin_bottom = 126.0
rect_min_size = Vector2( 64, 52 )
size_flags_vertical = 0
texture = SubResource( 3 )
stretch_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Setup/VBoxContainer/GridContainer"]
margin_left = 64.0
margin_top = 74.0
margin_right = 469.0
margin_bottom = 156.0

[node name="Label" type="Label" parent="TabContainer/Setup/VBoxContainer/GridContainer/VBoxContainer"]
margin_right = 405.0
margin_bottom = 14.0
text = "Move the zip file into your project and select it:"

[node name="FileInputZip" parent="TabContainer/Setup/VBoxContainer/GridContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 18.0
margin_right = 335.0
margin_bottom = 48.0
size_flags_horizontal = 0
text = "Import zip"
value = "res://_data.zip"
get_from_state_initially = "path_zip"

[node name="IconLabelFileDoesNotExist" parent="TabContainer/Setup/VBoxContainer/GridContainer/VBoxContainer" instance=ExtResource( 3 )]
visible = false
margin_top = 52.0
margin_right = 405.0
margin_bottom = 82.0
text = "The zip file does not exist!"

[node name="IconLabelFileNotValid" parent="TabContainer/Setup/VBoxContainer/GridContainer/VBoxContainer" instance=ExtResource( 3 )]
visible = false
margin_top = 86.0
margin_right = 405.0
margin_bottom = 116.0
text = "The zip file could not be opened!"

[node name="IconLabelFileValid" parent="TabContainer/Setup/VBoxContainer/GridContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 52.0
margin_right = 405.0
margin_bottom = 82.0
icon = 2
text = "Everything seems to be OK!"

[node name="GridContainer2" type="GridContainer" parent="TabContainer/Setup/VBoxContainer"]
margin_top = 160.0
margin_right = 514.0
margin_bottom = 286.0
size_flags_horizontal = 3
custom_constants/vseparation = 22
custom_constants/hseparation = 0
columns = 2

[node name="Step3" type="TextureRect" parent="TabContainer/Setup/VBoxContainer/GridContainer2"]
margin_right = 64.0
margin_bottom = 52.0
rect_min_size = Vector2( 64, 52 )
size_flags_vertical = 0
texture = SubResource( 4 )
stretch_mode = 4

[node name="VBoxContainer2" type="VBoxContainer" parent="TabContainer/Setup/VBoxContainer/GridContainer2"]
margin_left = 64.0
margin_right = 514.0
margin_bottom = 52.0
custom_constants/separation = 0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Setup/VBoxContainer/GridContainer2/VBoxContainer2"]
margin_top = 2.0
margin_right = 450.0
margin_bottom = 22.0
custom_constants/separation = 0

[node name="Label2" type="Label" parent="TabContainer/Setup/VBoxContainer/GridContainer2/VBoxContainer2/HBoxContainer"]
margin_top = 3.0
margin_right = 409.0
margin_bottom = 17.0
text = "You can now use Atlasica! Your AtlasTextures have been moved "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonRevealResourceDir" type="Button" parent="TabContainer/Setup/VBoxContainer/GridContainer2/VBoxContainer2/HBoxContainer"]
margin_left = 409.0
margin_right = 450.0
margin_bottom = 20.0
size_flags_vertical = 4
text = "here"

[node name="Label" type="Label" parent="TabContainer/Setup/VBoxContainer/GridContainer2/VBoxContainer2"]
margin_top = 22.0
margin_right = 450.0
margin_bottom = 36.0
text = "Use the above tabs to view and drag them into your game."

[node name="HBoxContainer2" type="HBoxContainer" parent="TabContainer/Setup/VBoxContainer/GridContainer2/VBoxContainer2"]
margin_top = 36.0
margin_right = 450.0
margin_bottom = 50.0
custom_constants/separation = 0

[node name="Label" type="Label" parent="TabContainer/Setup/VBoxContainer/GridContainer2/VBoxContainer2/HBoxContainer2"]
margin_right = 347.0
margin_bottom = 14.0
text = "If you need help with anything check out this projects "

[node name="LinkButtonGitHub" type="LinkButton" parent="TabContainer/Setup/VBoxContainer/GridContainer2/VBoxContainer2/HBoxContainer2"]
margin_left = 347.0
margin_right = 426.0
margin_bottom = 14.0
size_flags_vertical = 4
text = "GitHub page"

[node name="Label2" type="Label" parent="TabContainer/Setup/VBoxContainer/GridContainer2/VBoxContainer2/HBoxContainer2"]
margin_left = 426.0
margin_right = 430.0
margin_bottom = 14.0
text = "."

[node name="Step4" type="TextureRect" parent="TabContainer/Setup/VBoxContainer/GridContainer2"]
margin_top = 74.0
margin_right = 64.0
margin_bottom = 126.0
rect_min_size = Vector2( 64, 52 )
size_flags_vertical = 0
texture = SubResource( 5 )
stretch_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Setup/VBoxContainer/GridContainer2"]
margin_left = 64.0
margin_top = 74.0
margin_right = 514.0
margin_bottom = 126.0
custom_constants/separation = 0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Setup/VBoxContainer/GridContainer2/VBoxContainer"]
margin_top = 7.0
margin_right = 450.0
margin_bottom = 21.0
custom_constants/separation = 0

[node name="Label2" type="Label" parent="TabContainer/Setup/VBoxContainer/GridContainer2/VBoxContainer/HBoxContainer"]
margin_right = 251.0
margin_bottom = 14.0
text = "If you want to change the atlas use the "

[node name="LinkButtonSpriteBuilder" type="LinkButton" parent="TabContainer/Setup/VBoxContainer/GridContainer2/VBoxContainer/HBoxContainer"]
margin_left = 251.0
margin_right = 334.0
margin_bottom = 14.0
size_flags_vertical = 4
text = "SpriteBuilder"

[node name="Label3" type="Label" parent="TabContainer/Setup/VBoxContainer/GridContainer2/VBoxContainer/HBoxContainer"]
margin_left = 334.0
margin_right = 338.0
margin_bottom = 14.0
text = ","

[node name="HBoxContainer2" type="HBoxContainer" parent="TabContainer/Setup/VBoxContainer/GridContainer2/VBoxContainer"]
margin_top = 21.0
margin_right = 450.0
margin_bottom = 45.0
custom_constants/separation = 0

[node name="Label5" type="Label" parent="TabContainer/Setup/VBoxContainer/GridContainer2/VBoxContainer/HBoxContainer2"]
margin_top = 5.0
margin_right = 90.0
margin_bottom = 19.0
text = "re-export and "

[node name="ButtonUpdate" type="Button" parent="TabContainer/Setup/VBoxContainer/GridContainer2/VBoxContainer/HBoxContainer2"]
margin_left = 90.0
margin_top = 2.0
margin_right = 160.0
margin_bottom = 22.0
size_flags_vertical = 4
text = "manually"

[node name="Label3" type="Label" parent="TabContainer/Setup/VBoxContainer/GridContainer2/VBoxContainer/HBoxContainer2"]
margin_left = 160.0
margin_top = 5.0
margin_right = 177.0
margin_bottom = 19.0
text = " or"

[node name="CheckBoxUpdate" type="CheckBox" parent="TabContainer/Setup/VBoxContainer/GridContainer2/VBoxContainer/HBoxContainer2"]
margin_left = 177.0
margin_right = 291.0
margin_bottom = 24.0
text = "automatically"

[node name="Label4" type="Label" parent="TabContainer/Setup/VBoxContainer/GridContainer2/VBoxContainer/HBoxContainer2"]
margin_left = 291.0
margin_top = 5.0
margin_right = 406.0
margin_bottom = 19.0
text = "update resources."

[node name="ViewOrphan" parent="TabContainer/Setup/VBoxContainer/GridContainer2/VBoxContainer" instance=ExtResource( 8 )]
visible = false
margin_top = 38.0
margin_bottom = 68.0

[node name="Atlas" type="HBoxContainer" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_tab_disabled": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Atlas"]
margin_right = 420.0
margin_bottom = 564.0
mouse_filter = 2
size_flags_vertical = 3

[node name="IconLabelDrag" parent="TabContainer/Atlas/VBoxContainer" instance=ExtResource( 3 )]
margin_right = 420.0
mouse_filter = 2
icon = 6
text = "Left click and drag to get texture"

[node name="IconLabelPan" parent="TabContainer/Atlas/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 34.0
margin_right = 420.0
margin_bottom = 64.0
mouse_filter = 2
icon = 4
text = "Right click and pan to move around"

[node name="IconLabelZoom" parent="TabContainer/Atlas/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 68.0
margin_right = 420.0
margin_bottom = 98.0
mouse_filter = 2
icon = 5
text = "Scroll to zoom"

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Atlas/VBoxContainer"]
margin_top = 102.0
margin_right = 142.0
margin_bottom = 122.0
mouse_filter = 2
size_flags_horizontal = 0

[node name="Button" type="Button" parent="TabContainer/Atlas/VBoxContainer/HBoxContainer"]
margin_right = 142.0
margin_bottom = 20.0
focus_mode = 0
text = "Reset pan and zoom"

[node name="HSeparator" type="HSeparator" parent="TabContainer/Atlas/VBoxContainer"]
margin_top = 126.0
margin_right = 420.0
margin_bottom = 130.0

[node name="HBoxContainer2" type="HBoxContainer" parent="TabContainer/Atlas/VBoxContainer"]
margin_top = 134.0
margin_right = 420.0
margin_bottom = 158.0

[node name="Label" type="Label" parent="TabContainer/Atlas/VBoxContainer/HBoxContainer2"]
margin_top = 5.0
margin_right = 37.0
margin_bottom = 19.0
text = "Filter:"

[node name="LineEditFilterAtlas" type="LineEdit" parent="TabContainer/Atlas/VBoxContainer/HBoxContainer2"]
margin_left = 41.0
margin_right = 420.0
margin_bottom = 24.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator2" type="HSeparator" parent="TabContainer/Atlas/VBoxContainer"]
margin_top = 162.0
margin_right = 420.0
margin_bottom = 166.0

[node name="Inspector" parent="TabContainer/Atlas/VBoxContainer" instance=ExtResource( 5 )]
modulate = Color( 1, 1, 1, 0 )
margin_top = 170.0
margin_right = 420.0
margin_bottom = 564.0
preview_sprite = true

[node name="ViewAtlas" parent="TabContainer/Atlas" instance=ExtResource( 4 )]
margin_left = 424.0
margin_right = 1016.0
margin_bottom = 564.0

[node name="List of Sprites" type="HBoxContainer" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_tab_disabled": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/List of Sprites"]
margin_right = 420.0
margin_bottom = 564.0
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="TabContainer/List of Sprites/VBoxContainer"]
margin_right = 420.0
margin_bottom = 48.0
columns = 2

[node name="Label" type="Label" parent="TabContainer/List of Sprites/VBoxContainer/GridContainer"]
margin_top = 5.0
margin_right = 41.0
margin_bottom = 19.0
text = "Filter:"

[node name="LineEditFilterList" type="LineEdit" parent="TabContainer/List of Sprites/VBoxContainer/GridContainer"]
margin_left = 45.0
margin_right = 420.0
margin_bottom = 24.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="TabContainer/List of Sprites/VBoxContainer/GridContainer"]
margin_top = 31.0
margin_right = 41.0
margin_bottom = 45.0
text = "Order:"

[node name="OptionButtonOrder" type="OptionButton" parent="TabContainer/List of Sprites/VBoxContainer/GridContainer"]
margin_left = 45.0
margin_top = 28.0
margin_right = 420.0
margin_bottom = 48.0
text = "Alphabetic"
items = [ "Alphabetic", null, false, 0, null, "Position in Atlas", null, false, 1, null, "Width", null, false, 2, null, "Height", null, false, 3, null, "Size", null, false, 4, null ]
selected = 0

[node name="HSeparator" type="HSeparator" parent="TabContainer/List of Sprites/VBoxContainer"]
margin_top = 52.0
margin_right = 420.0
margin_bottom = 56.0

[node name="Inspector" parent="TabContainer/List of Sprites/VBoxContainer" instance=ExtResource( 5 )]
modulate = Color( 1, 1, 1, 0 )
margin_top = 60.0
margin_right = 420.0
margin_bottom = 172.0
preview_sprite = true

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/List of Sprites"]
margin_left = 424.0
margin_right = 1016.0
margin_bottom = 564.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="ViewList" parent="TabContainer/List of Sprites/ScrollContainer" instance=ExtResource( 6 )]
margin_right = 592.0
margin_bottom = 0.0
rect_clip_content = true
size_flags_horizontal = 3

[node name="Tween" type="Tween" parent="."]
[connection signal="tab_changed" from="TabContainer" to="." method="_on_TabContainer_tab_changed"]
[connection signal="pressed" from="TabContainer/Setup/MarginContainer/VBoxContainer/LinkButtonGitHub" to="." method="_on_LinkButtonGitHub_pressed"]
[connection signal="pressed" from="TabContainer/Setup/VBoxContainer/GridContainer/HBoxContainer/LinkButtonSpriteBuilder" to="." method="_on_LinkButtonSpriteBuilder_pressed"]
[connection signal="value_changed" from="TabContainer/Setup/VBoxContainer/GridContainer/VBoxContainer/FileInputZip" to="." method="_on_FileInputZip_value_changed"]
[connection signal="pressed" from="TabContainer/Setup/VBoxContainer/GridContainer2/VBoxContainer2/HBoxContainer/ButtonRevealResourceDir" to="." method="_on_ButtonRevealResourceDir_pressed"]
[connection signal="pressed" from="TabContainer/Setup/VBoxContainer/GridContainer2/VBoxContainer2/HBoxContainer2/LinkButtonGitHub" to="." method="_on_LinkButtonGitHub_pressed"]
[connection signal="pressed" from="TabContainer/Setup/VBoxContainer/GridContainer2/VBoxContainer/HBoxContainer/LinkButtonSpriteBuilder" to="." method="_on_LinkButtonSpriteBuilder_pressed"]
[connection signal="pressed" from="TabContainer/Setup/VBoxContainer/GridContainer2/VBoxContainer/HBoxContainer2/ButtonUpdate" to="." method="_on_ButtonUpdate_pressed"]
[connection signal="pressed" from="TabContainer/Atlas/VBoxContainer/HBoxContainer/Button" to="TabContainer/Atlas/ViewAtlas" method="_on_reset"]
[connection signal="text_changed" from="TabContainer/Atlas/VBoxContainer/HBoxContainer2/LineEditFilterAtlas" to="TabContainer/Atlas/ViewAtlas" method="_on_LineEditFilterAtlas_text_changed"]
[connection signal="item_hovered" from="TabContainer/Atlas/ViewAtlas" to="TabContainer/Atlas/VBoxContainer/Inspector" method="_on_item_hovered"]
[connection signal="item_unhovered" from="TabContainer/Atlas/ViewAtlas" to="TabContainer/Atlas/VBoxContainer/Inspector" method="_on_item_unhovered"]
[connection signal="text_changed" from="TabContainer/List of Sprites/VBoxContainer/GridContainer/LineEditFilterList" to="TabContainer/List of Sprites/ScrollContainer/ViewList" method="_on_LineEditFilterList_text_changed"]
[connection signal="item_selected" from="TabContainer/List of Sprites/VBoxContainer/GridContainer/OptionButtonOrder" to="TabContainer/List of Sprites/ScrollContainer/ViewList" method="_on_OptionButtonOrder_item_selected"]
[connection signal="item_hovered" from="TabContainer/List of Sprites/ScrollContainer/ViewList" to="TabContainer/List of Sprites/VBoxContainer/Inspector" method="_on_item_hovered"]
[connection signal="item_unhovered" from="TabContainer/List of Sprites/ScrollContainer/ViewList" to="TabContainer/List of Sprites/VBoxContainer/Inspector" method="_on_item_unhovered"]
